--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-    "name": "electronapp",
-    "version": "1.0.0",
-    "description": "to calculate",
-    "main": "main.js",
-    "scripts": {
-        "test": "jest",
-        "start": "electron .",
-        "package-win": "electron-packager calculate --platform=win32 --electron-version=10.0.0 --arch=x64 --download.mirrorOptions.mirror=https://npm.taobao.org/mirrors/electron/ --asar --app-version=0.0.0 --build-version=0.0.0 --out=./calculate --overwrite --no-package-manager  "
-    },
-    "devDependencies": {
-        "electron": "^26.2.2",
-        "electron-packager": "^17.1.2"
-    },
-    "author": "lql",
-    "license": "ISC"
+  "name": "electronapp",
+  "version": "1.0.0",
+  "description": "to calculate",
+  "main": "main.js",
+  "scripts": {
+    "test": "vitest",
+    "start": "electron-forge start",
+    "make": "electron-forge make"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "electron": "^26.2.2",
+    "jest": "^29.7.0",
+    "vitest": "^0.34.5"
+  },
+  "electronDownload": {
+    "mirror": "https://npm.taobao.org/mirrors/electron/"
+  },
+  "author": "lql",
+  "license": "ISC",
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
+  }
 }
